--- a/src/modules/charts/templates/charts.html
+++ b/src/modules/charts/templates/charts.html
@@ -1,8 +1,5 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-xs-12">
-        <h1 class="page-header">Charts</h1>
-    </div>
-    <div class="col-lg-12 col-md-12 col-xs-12">
-      
+        <h1 class="page-header">Analyses graphiques</h1>
     </div>
 </div>
