--- a/src/modules/charts/templates/charts.html
+++ b/src/modules/charts/templates/charts.html
@@ -1,5 +1,16 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-xs-12">
-        <h1 class="page-header">ANALYSES GRAPHIQUES</h1>
+        <h1 class="page-header">ANALYSIS</h1>
+    </div>
+    <div class="col-lg-12 col-md-12 col-xs-12">
+        <form class="col-lg-6 col-md-6 col-xs-6">
+            <div class="form-group">
+                <label for="depSelect" ng-bind="chooseDep"></label>
+                <select class="form-control" id="depSelect" type="number" min="0" ng-model="dep" ng-options="depName for depName in deps"></select>
+            </div>
+        </form>
+    </div>
+    <div class="col-lg-12 col-md-12 col-xs-12">
+        <custom-drilldown add-new-series="addNewSeries" remove-series="removeSeries" type="type" title="title" drilldown="drilldown"></custom-drilldown>
     </div>
 </div>
