--- a/src/modules/dashboard/templates/dashboard.html
+++ b/src/modules/dashboard/templates/dashboard.html
@@ -1,14 +1,14 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-xs-12">
-        <h3 class="page-header">LES CONSERVATOIRES D'ILE DE FRANCE</h3>
+        <h3 class="page-header">ILE DE FRANCE'S CONSERVATORIES</h3>
     </div>
     <div ng-id="totalItems > 0" class="col-lg-12 col-md-12 col-xs-12">
         <table id="table" class="table table-responsive table-bordered">
             <thead>
                 <tr>
-                    <th>DÉNOMINATION SOCIALE</th>
-                    <th>VILLE</th>
-                    <th>DÉTAILS</th>
+                    <th>COMPANY NAME</th>
+                    <th>TOWN</th>
+                    <th>DETAILS</th>
                 </tr>
             </thead>
             <tbody>
