Added drilldown on chart

--- a/src/modules/charts/templates/charts.html
+++ b/src/modules/charts/templates/charts.html
@@ -2,7 +2,7 @@
     <div class="col-lg-12 col-md-12 col-xs-12">
         <h1 class="page-header">ANALYSIS</h1>
     </div>
-    <div class="col-lg-12 col-md-12 col-xs-12">
+    <div class="col-lg-12 col-md-12 col-xs-12" hidden="true">
         <form class="col-lg-6 col-md-6 col-xs-6">
             <div class="form-group">
                 <label for="depSelect" ng-bind="chooseDep"></label>
@@ -11,6 +11,6 @@
         </form>
     </div>
     <div class="col-lg-12 col-md-12 col-xs-12">
-        <custom-drilldown add-new-series="addNewSeries" remove-series="removeSeries" type="type" title="title" drilldown="drilldown"></custom-drilldown>
+        <custom-drilldown add-new-series="addNewSeries" remove-series="removeSeries" type="type" title="title" drilldown="addDrilldown"></custom-drilldown>
     </div>
 </div>
