Added sorting on postcode column in dashboard

--- a/src/modules/dashboard/sass/_dashboard.scss
+++ b/src/modules/dashboard/sass/_dashboard.scss
@@ -8,3 +8,12 @@
         color: black;
     }
 }
+.clickable {
+    cursor: pointer;
+}
+
+th.clickable {
+    &:hover {
+        background-color: grey;
+    }
+}
