--- a/src/modules/dashboard/templates/dashboard.html
+++ b/src/modules/dashboard/templates/dashboard.html
@@ -8,7 +8,7 @@
                 <tr>
                     <th>COMPANY NAME</th>
                     <th>TOWN</th>
-                    <th>POSTCODE</th>
+                    <th class="clickable" ng-click="sortByColumn('cp')">POSTCODE</th>
                     <th>DETAILS</th>
                 </tr>
             </thead>
