--- a/src/modules/conservatory/sass/_conservatory.scss
+++ b/src/modules/conservatory/sass/_conservatory.scss
@@ -5,6 +5,14 @@
 #mapWindow {
     height: 100%;
     width: 90%;
+    
+    .conservatory-details {
+        padding-top: 15px;
+        padding-left: 20px;
+    }
+    .conservatory-img {
+        padding-left: 20px;
+    }
 }
 #modalForm {
     margin: 0;
