--- a/src/modules/dashboard/sass/_dashboard.scss
+++ b/src/modules/dashboard/sass/_dashboard.scss
@@ -1,8 +1,10 @@
+$main-color: #8B668B;
+
 #table {
     margin: 0;
 }
 #custPagination {
-    margin: 0;
+    margin: 0 0 10px 0;
     color: black;
     & > li > a,a:hover {
         color: black;
@@ -16,4 +18,13 @@ th.clickable {
     &:hover {
         background-color: grey;
     }
+}
+
+.pagination > .active {
+    > a, > span {
+        &, &:focus, &:hover {
+            background-color: $main-color;
+            border-color: $main-color;
+        }
+    } 
 }
