--- a/src/modules/dashboard/templates/dashboard.html
+++ b/src/modules/dashboard/templates/dashboard.html
@@ -6,13 +6,15 @@
         <div class="col-lg-12 col-md-12 col-xs-12">
             <form class="col-lg-6 col-md-6 col-xs-6">
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Find conservatory" ng-model="searchedConserv" ng-change="changePage(1,searchedConserv)">
+                    <input class="form-control" type="text" placeholder="Find conservatory" ng-model="searchedConserv"
+                           ng-change="changePage(1,searchedConserv)">
                 </div>
             </form>
         </div>
         <div class="col-lg-12 col-md-12 col-xs-12">
-            <div ng-id="totalItems > 0" class="col-lg-8 col-md-8 col-xs-12">
-                <table id="table" class="table table-responsive table-bordered">
+            <div class="col-lg-8 col-md-8 col-xs-12">
+                <h3 ng-if="totalItems === 0">No result</h3>
+                <table id="table" ng-if="totalItems > 0" class="table table-responsive table-bordered">
                     <thead>
                     <tr>
                         <th>COMPANY NAME</th>
@@ -32,11 +34,12 @@
                     </tr>
                     </tbody>
                 </table>
-                <uib-pagination id="custPagination" class="pagination-sm" direction-links="true" boundary-links="true"
+                <ul uib-pagination id="custPagination" class="pagination-sm" boundary-links="true"
                                 boundary-link-numbers="true" total-items="totalItems" num-pages="numPages"
-                                max-size="maxSize" ng-model="currentPage" ng-change="changePage(currentPage, searchedConserv)"
+                                max-size="maxSize" ng-model="currentPage"
+                                ng-change="changePage(currentPage, searchedConserv)"
                                 previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"
-                                items-per-page="itemsPerPage"></uib-pagination>
+                                items-per-page="itemsPerPage"></ul>
             </div>
             <div class="col-lg-4 col-md-4 col-xs-12 center">
                 <img class="header-img" src="assets/img/instruments_musique_trompette.svg">
@@ -44,3 +47,4 @@
             </div>
         </div>
     </div>
+</div>
