--- a/src/assets/sass/basics.scss
+++ b/src/assets/sass/basics.scss
@@ -6,39 +6,52 @@ $font-stack: arial;
 $main-color: #8B668B;
 
 @mixin margins($top, $bottom, $left) {
-    margin-top: $top;
-    margin-bottom: $bottom;
-    margin-left: $left;
+  margin-top: $top;
+  margin-bottom: $bottom;
+  margin-left: $left;
 }
+
 * {
-    font-family: $font-stack;
-    font-size: small;
+  font-family: $font-stack;
+  font-size: small;
 }
+
+.navbar-static-top {
+  margin-bottom: 0;
+}
+
 body {
-    background-color: #FFF;
+  background-color: #FFF;
 }
+
 #wrapper {
-    background-color: #f8f8f8;
+  background-color: #f8f8f8;
 }
+
 .clickable {
-    cursor: pointer;
+  cursor: pointer;
 }
+
 a {
-    color: $main-color;
+  color: $main-color;
 }
+
 .popup-img {
-    max-height: 150px;
-    max-width: 150px;
+  max-height: 150px;
+  max-width: 150px;
 }
+
 .header-img {
-    max-height: 250px;
-    max-width: 200px;
+  max-height: 250px;
+  max-width: 200px;
 }
+
 .center {
-    text-align: center;
+  text-align: center;
 }
+
 #alert {
-    color: #a94442;
-    background-color: #f2dede;
-    border-color: #ebccd1;
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
 }
