--- a/src/modules/charts/templates/charts.html
+++ b/src/modules/charts/templates/charts.html
@@ -8,12 +8,10 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-xs-12">
         <div class="col-lg-6 col-md-6 col-xs-6">
-            <form>
-                <div class="form-group">
-                    <select class="form-control" id="typeSelect" type="text" ng-model="type"
-                            ng-options="type as type.name for type in types"></select>
-                </div>
-            </form><br/><br/>
+            <form class="form-group">
+                <select class="form-control" id="typeSelect" type="text" ng-model="type"
+                        ng-options="type as type.name for type in types"></select>
+            </form>
         </div>
     </div>
     <div ng-show="deps.length > 0" class="col-lg-12 col-md-12 col-xs-12">
