--- a/src/modules/conservatory/templates/markerWindow.html
+++ b/src/modules/conservatory/templates/markerWindow.html
@@ -1,11 +1,11 @@
 <div id="mapWindow">
-    <div class="col-lg-6 col-md-6 col-xs-6 conservatory-details">
+    <div class="col-lg-12 col-md-12 col-xs-12 conservatory-details">
         <p><b ng-bind="parameter.categorie"></b></p>
         <p ng-bind="parameter.rue_1 || parameter.rue_2 || parameter.rue_3"></p>
         <p ng-bind="parameter.cp + ' ' + parameter.ville"></p>
         <p ng-bind="parameter.tel"></p>
     </div>
-    <div class="col-lg-6 col-md-6 col-xs-6 center conservatory-img">                            
+    <!--<div class="col-lg-6 col-md-6 col-xs-6 center conservatory-img">
         <img class="popup-img" src="assets/img/instruments_musique_harpe.svg">
-    </div>
+    </div>-->
 </div>
