--- a/src/modules/conservatory/templates/conservatoryDetails.html
+++ b/src/modules/conservatory/templates/conservatoryDetails.html
@@ -8,9 +8,9 @@
     </form>
 </div>
 <div class="modal-body">
-    <ui-gmap-google-map class="fullwidth" ng-if="showMap" center="marker.coord" zoom="marker.zoom">
+    <ui-gmap-google-map class="fullwidth" ng-if="showMap" center="map.coord" zoom="marker.zoom">
         <ui-gmap-marker idKey="marker.id" coords="marker.coord" click="onMarkerClick()">
-            <ui-gmap-window options="windowOptions" closeClick="closeWindow()" templateUrl="templateUrl"
+            <ui-gmap-window show="showWindow" closeClick="closeWindow()" templateUrl="templateUrl"
                             templateParameter="conservatory">
             </ui-gmap-window>
         </ui-gmap-marker>
