Updated contact page and moved main directive to component

--- a/src/modules/charts/templates/charts.html
+++ b/src/modules/charts/templates/charts.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div ng-show="deps.length > 0" class="col-lg-12 col-md-12 col-xs-12">
-        <custom-drilldown add-new-series="addNewSeries" remove-series="removeSeries" type="type.code" title="title"
-                          drilldown="addDrilldown" load-data="loadDeps"></custom-drilldown>
+        <custom-drilldown-compo add-new-series="addNewSeries" remove-series="removeSeries" type="type.code" title="title"
+                          drilldown="addDrilldown" load-data="loadDeps"></custom-drilldown-compo>
     </div>
 </div>
