--- a/src/modules/contact/templates/contact.html
+++ b/src/modules/contact/templates/contact.html
@@ -1,11 +1,15 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-xs-12">
         <h2>Illustrations</h2>
-        <p>Thank you very much to <a href="https://www.elodiearete.fr">Elodie Arete</a></p>
+        <p>Many thanks to <a href="https://www.elodiearete.fr">Elodie Arete</a></p>
         <img class="header-img" src="assets/img/instruments_musique_guitare.svg">
     </div>
     <div class="col-lg-12 col-md-12 col-xs-12">
+        <h2>Infrastructure</h2>
+        <p>Many thanks to <a href="https://github.com/ViBiOh">Vincent Boutour</a></p>
+    </div>
+    <div class="col-lg-12 col-md-12 col-xs-12">
         <h2>Development</h2>
-        <a href="https://fr.linkedin.com/in/alice-rimassa-36853762">Alice Rimassa</a>
+        <a href="https://fr.linkedin.com/in/alice-rimassa">Alice Rimassa</a>
     </div>
 </div>
