--- a/src/modules/contact/templates/contact.html
+++ b/src/modules/contact/templates/contact.html
@@ -10,6 +10,6 @@
     </div>
     <div class="col-lg-12 col-md-12 col-xs-12">
         <h2>Development</h2>
-        <a href="https://fr.linkedin.com/in/alice-rimassa">Alice Rimassa</a>
+        <a href="https://github.com/lili1725">Alice Rimassa</a>
     </div>
 </div>
