Started migration on new api and new chart library

--- a/src/modules/charts/templates/charts.html
+++ b/src/modules/charts/templates/charts.html
@@ -1,6 +1,5 @@
 <div class="row padding-10">
     <div class="col-lg-12 col-md-12 col-xs-12">
-        <custom-drilldown title="title"
-                          load-data="loadDeps"></custom-drilldown>
+        <custom-drilldown></custom-drilldown>
     </div>
 </div>
