--- a/src/modules/conservatory/templates/conservatoryDetails.html
+++ b/src/modules/conservatory/templates/conservatoryDetails.html
@@ -4,7 +4,7 @@
             <button class="btn-close" ng-click="close()"><i class="glyphicon glyphicon-remove-circle" aria-hidden="true"></i>
             </button>
         </div>
-        <h4 class="modal-title" ng-bind="conservatory.denomination_sociale"></h4>
+        <h4 class="modal-title" ng-bind="conservatory.name"></h4>
     </form>
 </div>
 <div class="modal-body">
