--- a/src/modules/dashboard/templates/dashboard.html
+++ b/src/modules/dashboard/templates/dashboard.html
@@ -3,8 +3,13 @@
         <div class="col-lg-12 col-md-12 col-xs-12">
             <form class="col-lg-12 col-md-12 col-xs-12">
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Find conservatory" ng-model="searchedConserv"
-                           ng-change="changePage(1,searchedConserv)">
+                    <input class="form-control" type="text" placeholder="Find conservatory" ng-model="filter"
+                           ng-change="changePage({
+                           page: 1,
+                           sort: currentCriteria,
+                           order: orders[currentCriteria],
+                           filter: filter
+                           })">
                 </div>
             </form>
         </div>
@@ -14,17 +19,17 @@
                 <table id="table" ng-if="totalItems > 0" class="table table-responsive table-bordered">
                     <thead>
                     <tr>
-                        <th>COMPANY NAME</th>
-                        <th>TOWN</th>
-                        <th class="clickable" ng-click="sortByColumn('cp')">POSTCODE</th>
+                        <th class="clickable" ng-click="sortByColumn('name')">COMPANY NAME</th>
+                        <th class="clickable" ng-click="sortByColumn('city')">TOWN</th>
+                        <th class="clickable" ng-click="sortByColumn('zip')">POSTCODE</th>
                         <th>DETAILS</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr ng-repeat="conservatory in conservatories">
-                        <td ng-bind="conservatory._source.fields.denomination_sociale"></td>
-                        <td ng-bind="conservatory._source.fields.ville"></td>
-                        <td ng-bind="conservatory._source.fields.cp"></td>
+                        <td ng-bind="conservatory.name"></td>
+                        <td ng-bind="conservatory.city"></td>
+                        <td ng-bind="conservatory.zip"></td>
                         <td class="text-center"><a><i class="glyphicon glyphicon-map-marker clickable"
                                                       ng-click="openDetails(conservatory)" aria-hidden="true"></i></a>
                         </td>
@@ -32,11 +37,11 @@
                     </tbody>
                 </table>
                 <ul uib-pagination id="custPagination" class="pagination-sm" boundary-links="true"
-                                boundary-link-numbers="true" total-items="totalItems" num-pages="numPages"
-                                max-size="maxSize" ng-model="currentPage"
-                                ng-change="changePage(currentPage, searchedConserv)"
-                                previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"
-                                items-per-page="itemsPerPage"></ul>
+                    boundary-link-numbers="true" total-items="totalItems" num-pages="numPages"
+                    max-size="maxSize" ng-model="currentPage"
+                    ng-change="changePage(currentPage, searchedConserv)"
+                    previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"
+                    items-per-page="itemsPerPage"></ul>
             </div>
             <div class="col-lg-4 col-md-4 col-xs-12 center">
                 <img class="header-img" src="assets/img/instruments_musique_trompette.svg">
