--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,5 +1,6 @@
 @import '../../scripts/dashboard/dashboard';
 @import '../../scripts/conservatory/conservatory';
+@import '../../../node_modules/bootstrap/dist/css/bootstrap.min.css';
 
 $font-stack: arial;
 $main-color: #8B668B;
@@ -27,7 +28,7 @@ body {
     width: 100%;
 
     @media screen and (max-width: 500px) {
-     flex-flow: column nowrap;
+      flex-flow: column nowrap;
     }
     @media screen and (min-width: 500px) {
       flex-flow: row nowrap;
