Improvments on style, industralisation, updated readme

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -4,11 +4,40 @@
 
 $font-stack: arial;
 $main-color: #8B668B;
+$responsive-width: 500px;
 
 @mixin margins($top, $bottom, $left) {
   margin-top: $top;
   margin-bottom: $bottom;
   margin-left: $left;
+}
+
+@mixin flex-row {
+  display: inline-flex;
+  flex-flow: row nowrap;
+}
+
+.center {
+  text-align: center;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
+a {
+  color: $main-color;
+}
+
+.header-img {
+  @media screen and (max-width: $responsive-width) {
+    max-height: 200px;
+    max-width: 150px;
+  }
+  @media screen and (min-width: $responsive-width) {
+    max-height: 250px;
+    max-width: 200px;
+  }
 }
 
 * {
@@ -26,17 +55,32 @@ body {
 
     display: inline-flex;
     width: 100%;
+    border: 0;
+    background: transparent;
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: $responsive-width) {
       flex-flow: column nowrap;
-    }
-    @media screen and (min-width: 500px) {
-      flex-flow: row nowrap;
+      align-items: center;
     }
 
-    .navbar-header, .navbar-default {
-      width: 100%;
+    @media screen and (min-width: $responsive-width) {
+      flex-flow: row nowrap;
+      .navbar-default {
+        width: 100%;
+
+        .menu-bar {
+          @include flex-row();
+        }
+        .sidebar-nav {
+          padding: 5px;
+        }
+      }
     }
+
+    .navbar-toggle {
+      width: 47px;
+    }
+
     .navbar-static-top {
       margin-bottom: 0;
     }
@@ -45,36 +89,4 @@ body {
   .padding-10 {
     padding: 10px;
   }
-}
-
-#wrapper {
-  background-color: #f8f8f8;
-}
-
-.clickable {
-  cursor: pointer;
-}
-
-a {
-  color: $main-color;
-}
-
-.popup-img {
-  max-height: 150px;
-  max-width: 150px;
-}
-
-.header-img {
-  max-height: 250px;
-  max-width: 200px;
-}
-
-.center {
-  text-align: center;
-}
-
-#alert {
-  color: #a94442;
-  background-color: #f2dede;
-  border-color: #ebccd1;
 }
