--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,6 +1,7 @@
-@import '../../scripts/dashboard/dashboard';
 @import '../../scripts/conservatory/conservatory';
-@import '../../../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import '../../../node_modules/material-design-icons/iconfont/material-icons.css';
+@import './material';
+@import '../../../node_modules/angular-material/angular-material.min.css';
 
 $font-stack: arial;
 $main-color: #8B668B;
@@ -29,6 +30,14 @@ a {
   color: $main-color;
 }
 
+h2 {
+  font-weight: bold;
+}
+
+md-dialog {
+  max-width: 100%;
+}
+
 .header-img {
   @media screen and (max-width: $responsive-width) {
     max-height: 200px;
@@ -40,53 +49,19 @@ a {
   }
 }
 
-* {
-  font-family: $font-stack;
-  font-size: small;
-}
-
 body {
-  background-color: #FFF;
 
-  height: 100%;
-  width: 100%;
+  background: transparent;
 
-  .navbar {
-
-    display: inline-flex;
-    width: 100%;
-    border: 0;
-    background: transparent;
-
-    @media screen and (max-width: $responsive-width) {
-      flex-flow: column nowrap;
-      align-items: center;
-    }
-
-    @media screen and (min-width: $responsive-width) {
-      flex-flow: row nowrap;
-      .navbar-default {
-        width: 100%;
-
-        .menu-bar {
-          @include flex-row();
-        }
-        .sidebar-nav {
-          padding: 5px;
-        }
-      }
-    }
-
-    .navbar-toggle {
-      width: 47px;
-    }
-
-    .navbar-static-top {
-      margin-bottom: 0;
-    }
+  * {
+    font-family: $font-stack;
+    font-size: small;
   }
 
   .padding-10 {
     padding: 10px;
+  }
+  .width-250 {
+    width: 250px;
   }
 }
