--- a/src/scripts/conservatory/_conservatory.scss
+++ b/src/scripts/conservatory/_conservatory.scss
@@ -1,32 +1,10 @@
 .angular-google-map-container {
-  height: 80%;
-  width: 80%;
+  height: 70%;
 }
 
-#mapWindow {
-  height: 100%;
-  width: 90%;
-
+.mapWindow {
   .conservatory-details {
-    padding-top: 15px;
-    padding-left: 20px;
-  }
-  .conservatory-img {
-    padding-left: 20px;
-  }
-}
-
-#modalForm {
-  margin: 0;
-  .btn-close {
-    background: none;
-    border: 0;
-    margin: 2px;
-  }
-}
-
-.fullwidth {
-  .angular-google-map-container {
-    width: 100%;
+    padding-top: 5px;
+    padding-left: 5px;
   }
 }
