--- a/src/assets/sass/_material.scss
+++ b/src/assets/sass/_material.scss
@@ -9,3 +9,7 @@
   url(../../../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.woff) format('woff'),
   url(../../../node_modules/material-design-icons/iconfont/MaterialIcons-Regular.ttf) format('truetype');
 }
+
+md-input-container {
+  margin: 0;
+}
