--- a/src/scripts/conservatory/_conservatory.scss
+++ b/src/scripts/conservatory/_conservatory.scss
@@ -1,10 +1,2 @@
-.angular-google-map-container {
-  height: 70%;
-}
-
-.mapWindow {
-  .conservatory-details {
-    padding-top: 5px;
-    padding-left: 5px;
-  }
-}
+@import './drilldown/conservatory-drilldown';
+@import './details/conservatory-details';
