--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,7 +1,7 @@
 @import 'mixins';
 @import 'variables';
 @import '../../scripts/conservatory/conservatory';
-@import "../../scripts/dashboard/dashboard";
+@import '../../scripts/dashboard/dashboard';
 @import '../../../node_modules/material-design-icons/iconfont/material-icons.css';
 @import './material';
 @import '../../../node_modules/angular-material/angular-material.min.css';
@@ -27,16 +27,16 @@ body {
     position: relative;
 
     .fixed-bottom-left {
+      bottom: 0;
       position: fixed;
-      right: 0px;
-      bottom: 0px;
+      right: 0;
       width: 100%;
     }
   }
 
   .overflow-hidden {
-    overflow: hidden;
     height: 100%;
+    overflow: hidden;
   }
 
   .height-auto {
