--- a/src/scripts/conservatory/details/_conservatory-details.scss
+++ b/src/scripts/conservatory/details/_conservatory-details.scss
@@ -2,9 +2,9 @@
   height: 70%;
 }
 
-.mapWindow {
+.map-window {
   .conservatory-details {
-    padding-top: 5px;
     padding-left: 5px;
+    padding-top: 5px;
   }
 }
